# promise

./: Anchor.toml  README.md  package.json  scratch.ts  tsconfig.json
app/: .env  .env.example  LICENSE  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
app/programs/: squads_mpl-keypair.json
app/src/: colors.ts  colorsPremium.js  config.ts  env.ts  menuAside.ts  menuNavBar.ts  (+2 more)
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: enabled.rs  macro-tests.rs  size.rs
program/: Cargo.toml  README.md
program/src/: errors.rs  lib.rs  utils.rs
program/src/instructions/: initialize_network.rs  initialize_promise.rs  initialize_promisee.rs  initialize_promisor.rs  mod.rs  update_network.rs  update_promise.rs  update_promise_accept.rs  update_promise_active.rs  update_promise_completed.rs  update_promise_rules.rs  update_promisor.rs
program/src/network_ruleset/: nft_gate.rs
program/src/promise_ruleset/: mod.rs  sol_wager.rs
program/src/promisee_ruleset/: mod.rs  promise_end_date.rs  sol_wager.rs
program/src/promisor_ruleset/: mod.rs  sol_reward.rs
program/src/ruleset/: end_date.rs  start_date.rs
program/src/state/: mod.rs  promise.rs  promise_network.rs  promisee.rs  promisee_rules.rs  promisor.rs  promisor_rules.rs
sdk/: .gitignore  package-lock.json  package.json  tsconfig.json
specs/: SPEC.md  SPEC_INITIALISE_PROMISOR.md  SPEC_NFT_GATE.md
tests/: networkInitialise.ts  networkUpdate.ts  promiseInitialise.ts  promiseUpdate.ts  promiseeInitialise.ts  promisorInitialise.ts  promisorUpdate.ts  schema.ts  utils.ts
(+189 files in other folders)
